Fix overflow in <pre> elements

--- a/src/main/resources/static/css/submissionById.css
+++ b/src/main/resources/static/css/submissionById.css
@@ -31,3 +31,7 @@
     text-decoration-line: underline;
     font-weight: 700;
 }
+
+pre {
+    white-space: pre-wrap;
+}
